--- a/app/.settings/org.eclipse.buildship.core.prefs
+++ b/app/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=--init-script /home/dilip/.local/share/vim-lsp-settings/servers/eclips
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(8.1.1))
-connection.project.dir=
+connection.project.dir=..
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/usr/lib/jvm/java-18-openjdk-amd64
